code25_all/scala/11145728.txt
class SymbolUpdate(s: Symbol) {
    def update(i: Int) = s.name + i
}
implicit def toSymbolUpdate(s: Symbol) = new SymbolUpdate(s)

scala> 's = 1
<console>:327: error: value update is not a member of object Symbol
              's = 1
              ^

scala> 's.update(1)
res41: java.lang.String = s1

scala> 's() = 1
res42: java.lang.String = s1

